<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="24dp">

    <!-- Título -->

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/arrow_back"
        android:padding="10dp"
        android:src="@drawable/ic_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_hamburguesa"
        android:padding="10dp"
        android:src="@drawable/ic_hamb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/tvPerfil_Usuario"
        style="@style/AppTitleText"
        android:layout_width="374dp"
        android:layout_height="91dp"
        android:layout_marginTop="48dp"
        android:text="@string/info_screen_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvAppVersionLabel"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_version_label"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerfil_Usuario" />

    <TextView
        android:id="@+id/tvAppVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:shadowColor="@color/blanco"
        android:text="@string/app_version_number"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppVersionLabel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/la_vers_n_m_s_reciente_ya_est_instalada"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppVersionNumber"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>