<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/registrar_nuevo_socio"
            style="@style/AppTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_user"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/icono_persona"
            app:srcCompat="@drawable/ic_user"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Nombre"
            android:textColorHint="@color/hint_color"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_layer"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/ic_user"
            app:layout_constraintTop_toTopOf="@id/ic_user"
            app:layout_constraintEnd_toStartOf="@id/etApellido" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/apellido"
            android:textColorHint="@color/hint_color"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_layer"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/etNombre"
            app:layout_constraintStart_toEndOf="@id/etNombre"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgCarnet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icono_de_carnet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_user"
            app:srcCompat="@drawable/ic_id" />

        <EditText
            android:id="@+id/etNumeroDocumento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/n_mero_de_documento"
            android:textColorHint="@color/hint_color"
            android:textColor="#000000"
            android:inputType="number"
            android:background="@drawable/edit_text_layer"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/imgCarnet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgCarnet" />

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Ícono de teléfono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCarnet"
            app:srcCompat="@drawable/ic_phone" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:background="@drawable/edit_text_layer"
            android:textColorHint="@color/hint_color"
            android:textColor="#000000"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/imgTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgTelefono" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_mail"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/imgTelefono"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_layer"
            android:textColor="#000000"
            android:textColorHint="@color/hint_color"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/etTelefono"
            app:layout_constraintStart_toEndOf="@id/imgEmail"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvAptoFisico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/presenta_apto_f_sico"
            android:textColor="@color/boton_cerrar_sesion"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <RadioGroup
            android:id="@+id/rgAptoFisico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvAptoFisico"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <RadioButton
                android:id="@+id/rbSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sí"
                android:textColor="@color/boton_cerrar_sesion"
                android:textSize="24sp"
                android:layout_marginEnd="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="8dp"
                android:buttonTint="#FFFFFF" />

            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:textColor="@color/boton_cerrar_sesion"
                android:textSize="24sp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="8dp"
                android:buttonTint="#FFFFFF" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imgCalendario"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgAptoFisico"
            app:srcCompat="@drawable/ic_date" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="Fecha"
            android:inputType="date"
            android:background="@drawable/edit_text_layer"
            android:textColorHint="@color/hint_color"
            android:textColor="#000000"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/imgCalendario"
            app:layout_constraintBottom_toBottomOf="@id/imgCalendario"
            app:layout_constraintStart_toEndOf="@id/imgCalendario"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:textAlignment="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            style="@style/PrimaryButtonStyle"
            android:textAppearance="@style/PrimaryButtonText"
            app:layout_constraintTop_toBottomOf="@id/etFecha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRegistrar"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            style="@style/PrimaryButtonStyle"
            android:textAppearance="@style/PrimaryButtonText"
            app:layout_constraintTop_toBottomOf="@id/etFecha"
            app:layout_constraintStart_toEndOf="@id/btnCancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
